--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/k-kan-dev/timer#readme",
   "devDependencies": {
     "electron": "^24.4.0"
+  },
+  "dependencies": {
+    "python-shell": "^5.0.0",
+    "request": "^2.88.2"
   }
 }
